--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -29,6 +29,7 @@ apps="deepspeech facenet lanenet retain"
 # Add pythonpaths
 export PYTHONPATH=$PYTHONPATH:/app/apps/facenet/src
 export PYTHONPATH=$PYTHONPATH:/app/lanenet
+export PYTHONPATH=$PYTHONPATH:/app/algo
 export PYTHONPATH=$PYTHONPATH:/app/algo/Oracle
 export PYTHONPATH=$PYTHONPATH:/app/algo/SGRM
 
