--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -6,7 +6,7 @@
 rootDir="/app"
 # App & Helper Directory
 appdir="/app/apps"
-helpers="/app/helpers"
+scripts="/app/scripts"
 # Data Directories
 inputs="/app/data/inputs"
 outputs="/app/data/outputs"
@@ -17,8 +17,9 @@ temps="/app/data/temps"
 # Algorithm Directories
 algodir="/app/algo"
 workdir="/app/algo/workdir"
-sgrm="/app/algo/SGRM"
+nooffload="/app/algo/NoOffload"
 oracle="/app/algo/Oracle"
+sgrm="/app/algo/SGRM"
 
 # Apps
 apps="deepspeech facenet lanenet retain"
@@ -30,6 +31,7 @@ apps="deepspeech facenet lanenet retain"
 export PYTHONPATH=$PYTHONPATH:/app/apps/facenet/src
 export PYTHONPATH=$PYTHONPATH:/app/lanenet
 export PYTHONPATH=$PYTHONPATH:/app/algo
+export PYTHONPATH=$PYTHONPATH:/app/algo/NoOffload
 export PYTHONPATH=$PYTHONPATH:/app/algo/Oracle
 export PYTHONPATH=$PYTHONPATH:/app/algo/SGRM
 
@@ -58,3 +60,6 @@ testset_facenet="https://dropbox.com/s/i3zggkdxevnqp72/facenet_testset_mini.zip"
 testset_lanenet="https://dropbox.com/s/hg30lgzhq44ty8e/lanenet_testset_mini.zip"
 testset_retain="https://dropbox.com/s/sfd20o18vvnuqns/retain_testset_mini.zip"
 testset_retain_full="https://dropbox.com/s/jsl2h35v0p3m3q7/retain_testset_full.zip"
+
+# Payload URL
+payload_all="https://dropbox.com/s/kzm1s4hcrk95l5p/payloads.zip"
