--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -1,32 +1,36 @@
 #!/bin/bash
 # Configuration file
 
-### SETTINGS
+### 
+# SETTINGS
+###
 # Root Directory
-rootDir="/app"
+rootdir="/app"
 # App & Helper Directory
-appdir="/app/apps"
-scripts="/app/scripts"
+appdir="${rootdir}/apps"
+scripts="${rootdir}/scripts"
 # Data Directories
-inputs="/app/data/inputs"
-outputs="/app/data/outputs"
-payloads="/app/data/payloads"
-models="/app/data/models"
-logs="/app/data/logs"
-temps="/app/data/temps"
+datadir="${rootdir}/data"
+inputs="${datadir}/inputs"
+outputs="${datadir}/outputs"
+payloads="${datadir}/payloads"
+models="${datadir}/models"
+logs="${datadir}/logs"
+temps="${datadir}/temps"
 # Algorithm Directories
-algodir="/app/algo"
-workdir="/app/algo/workdir"
-nooffload="/app/algo/NoOffload"
-oracle="/app/algo/Oracle"
-sgrm="/app/algo/SGRM"
+algodir="${rootdir}/algo"
+workdir="${algodir}/workdir"
+nooffload="${algodir}/NoOffload"
+oracle="${algodir}/Oracle"
+sgrm="${algodir}/SGRM"
 
 # Apps
 apps="deepspeech facenet lanenet retain"
 
 
-
-### FIXES
+###
+# FIXES
+###
 # Add pythonpaths
 export PYTHONPATH=$PYTHONPATH:/app/apps/facenet/src
 export PYTHONPATH=$PYTHONPATH:/app/lanenet
@@ -43,7 +47,9 @@ sed -i 's/numpy.core.multiarray._get_ndarray_c_version())/numpy.core._multiarray
 
 
 
-### URLS
+### 
+# URLs
+###
 # Model URLs
 if [ "$platform" = "amd64" ]; then
   model_deepspeech="https://dropbox.com/s/cx2z6ka4tjselyl/deepspeech_model_pbmm.zip"
