--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -69,3 +69,6 @@ testset_retain_full="https://dropbox.com/s/jsl2h35v0p3m3q7/retain_testset_full.z
 
 # Payload URL
 payload_all="https://dropbox.com/s/kzm1s4hcrk95l5p/payloads.zip"
+
+# Face Database URL
+face_db="https://dropbox.com/s/bczpwwj1vueig0c/face_database.zip"
