Add loop option for apps, add profiler

--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -1,12 +1,13 @@
 #!/bin/bash
+# edgebench - apps/settings.cfg
 # Configuration file
 
 ### 
-# SETTINGS
+# Directories
 ###
 # Root Directory
 rootdir="/app"
-# App & Helper Directory
+# App & Script Directory
 appdir="${rootdir}/apps"
 scripts="${rootdir}/scripts"
 # Data Directories
