--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -1,5 +1,5 @@
 #!/bin/bash
-# edgebench - apps/settings.cfg
+# edgebench/apps/settings.cfg
 # Configuration file
 
 ### 
@@ -12,9 +12,9 @@ appdir="${rootdir}/apps"
 scripts="${rootdir}/scripts"
 # Data Directories
 datadir="${rootdir}/data"
+workdir="${datadir}/workdir"
 payloads="${datadir}/payloads"
 models="${datadir}/models"
-workdir="${datadir}/workdir"
 # Algorithm Directories
 algodir="${rootdir}/algo"
 nooffload="${algodir}/NoOffload"
@@ -36,8 +36,13 @@ export PYTHONPATH=$PYTHONPATH:/app/algo/NoOffload
 export PYTHONPATH=$PYTHONPATH:/app/algo/Oracle
 export PYTHONPATH=$PYTHONPATH:/app/algo/SGRM
 
+# facenet fix
+export PYTHONDONTWRITEBYTECODE=1
 # lanenet fix
 sed -i 's/if os.name != "nt" and platform.machine() != "s390x":/# not needed/' /usr/local/lib/python3.7/dist-packages/tensorflow/contrib/__init__.py
 sed -i 's/from tensorflow.contrib import cloud/# not needed/' /usr/local/lib/python3.7/dist-packages/tensorflow/contrib/__init__.py
 # retain fix
 sed -i 's/numpy.core.multiarray._get_ndarray_c_version())/numpy.core._multiarray_umath._get_ndarray_c_version())/' /usr/local/lib/python2.7/dist-packages/theano/gof/cc.py
+
+# Set permissions
+chmod -R 777 /app/*
