--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -2,21 +2,19 @@
 # edgebench/apps/settings.cfg
 # Configuration file
 
-### 
-# Directories
-###
+### Directories
 # Root Directory
 rootdir="/app"
-# App & Script Directory
+# Central Directories
+algodir="${rootdir}/algo"
 appdir="${rootdir}/apps"
+datadir="${rootdir}/data"
 scripts="${rootdir}/scripts"
 # Data Directories
-datadir="${rootdir}/data"
 workdir="${datadir}/workdir"
 payloads="${datadir}/payloads"
 models="${datadir}/models"
 # Algorithm Directories
-algodir="${rootdir}/algo"
 nooffload="${algodir}/NoOffload"
 oracle="${algodir}/Oracle"
 sgrm="${algodir}/SGRM"
@@ -25,12 +23,10 @@ sgrm="${algodir}/SGRM"
 apps="deepspeech facenet lanenet retain"
 
 
-###
-# FIXES
-###
+### FIXES
 # Add pythonpaths
 export PYTHONPATH=$PYTHONPATH:/app/apps/facenet/src
-export PYTHONPATH=$PYTHONPATH:/app/lanenet
+export PYTHONPATH=$PYTHONPATH:/app/apps/lanenet
 export PYTHONPATH=$PYTHONPATH:/app/algo
 export PYTHONPATH=$PYTHONPATH:/app/algo/NoOffload
 export PYTHONPATH=$PYTHONPATH:/app/algo/Oracle
