--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -10,13 +10,16 @@ algodir="${rootdir}/algo"
 appdir="${rootdir}/apps"
 datadir="${rootdir}/data"
 scripts="${rootdir}/scripts"
+workers="${rootdir}/workers"
 # Data Directories
 workdir="${datadir}/workdir"
 payloads="${datadir}/payloads"
 models="${datadir}/models"
 # Algorithm Directories
-nooffload="${algodir}/NoOffload"
+OffloadNone="${algodir}/OffloadNone"
+OffloadAll="${algodir}/OffloadAll"
 oracle="${algodir}/Oracle"
+dmrm="${algodir}/DMRM"
 sgrm="${algodir}/SGRM"
 
 # Apps
@@ -28,9 +31,12 @@ apps="deepspeech facenet lanenet retain"
 export PYTHONPATH=$PYTHONPATH:/app/apps/facenet/src
 export PYTHONPATH=$PYTHONPATH:/app/apps/lanenet
 export PYTHONPATH=$PYTHONPATH:/app/algo
-export PYTHONPATH=$PYTHONPATH:/app/algo/NoOffload
+export PYTHONPATH=$PYTHONPATH:/app/algo/OffloadNone
+export PYTHONPATH=$PYTHONPATH:/app/algo/OffloadAll
 export PYTHONPATH=$PYTHONPATH:/app/algo/Oracle
+export PYTHONPATH=$PYTHONPATH:/app/algo/DMRM
 export PYTHONPATH=$PYTHONPATH:/app/algo/SGRM
+export PYTHONPATH=$PYTHONPATH:/app/workers
 
 # facenet fix
 export PYTHONDONTWRITEBYTECODE=1
