Minor aesthetic update

--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -1,8 +1,12 @@
 #!/bin/bash
-# edgebench/apps/settings.cfg
-# Configuration file
+# Edgebench Platform
+# Configuration File
+#
+# All edgebench related settings & fixes are stored here
 
-### Directories
+###################
+### Directories ###
+###################
 # Root Directory
 rootdir="/app"
 # Central Directories
@@ -25,8 +29,9 @@ sgrm="${algodir}/SGRM"
 # Apps
 apps="deepspeech facenet lanenet retain"
 
-
-### FIXES
+#############
+### Fixes ###
+#############
 # Add pythonpaths
 export PYTHONPATH=$PYTHONPATH:/app/apps/facenet/src
 export PYTHONPATH=$PYTHONPATH:/app/apps/lanenet
