--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -1,8 +1,6 @@
 #!/bin/bash
-# Edgebench Platform
+# Edgebench Framework
 # Configuration File
-#
-# All edgebench related settings & fixes are stored here
 
 ###################
 ### Directories ###
