--- a/apps/settings.cfg
+++ b/apps/settings.cfg
@@ -25,6 +25,7 @@ dmrm="${algodir}/DMRM"
 sgrm="${algodir}/SGRM"
 
 # Apps
+algos="offloadNone offloadAll oracle dmrm sgrm"
 apps="deepspeech facenet lanenet retain"
 
 #############
